--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ h1 {
     color: #525454;
     font-size: 22px;
     margin: 0 0 10px 0;
-    text-align: center;
+    text-align: left;
 }
 
 hr {
@@ -70,4 +70,19 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+}
+
+.article-list {
+    margin: 0;
+    padding: 0;
+}
+
+.article {
+    list-style-type: none;
+    padding:10px;
+    border-top: 1px solid #CCC;
+}
+
+.article:first-child {
+    border-top:none;
 }
